syntax = "proto3";

option csharp_namespace = "CarRental.grpc";

package grpc;

message GetRequest{
	int32 id = 1;
}